--- a/Springboot_Mybatis/src/main/resources/application-dev.yml
+++ b/Springboot_Mybatis/src/main/resources/application-dev.yml
@@ -4,9 +4,9 @@ server:
 spring:
   datasource:
     username: root
-    password: 1234
-    url: jdbc:mysql://localhost:3306/springboot?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC
-    driver-class-name: com.mysql.jdbc.Driver
+    password: root
+    url: jdbc:mysql://localhost:3306/testdemo?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC
+    driver-class-name: com.mysql.cj.jdbc.Driver
 
 mybatis:
   mapper-locations: classpath:mapping/*Mapper.xml
