--- a/Springboot_Mybatis/src/main/resources/application.yml
+++ b/Springboot_Mybatis/src/main/resources/application.yml
@@ -1,3 +1,20 @@
+server:
+  port: 8080
+
 spring:
-  profiles:
-    active: dev
+  datasource:
+    username: root
+    password: root
+    url: jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
+mybatis:
+  mapper-locations: classpath:mapping/*Mapper.xml
+  type-aliases-package: com.example.entity
+
+#showSql
+logging:
+  level:
+    com:
+      example:
+        mapper : debug
