--- a/Springboot_Mybatis/src/main/resources/application.yml
+++ b/Springboot_Mybatis/src/main/resources/application.yml
@@ -1,3 +1,21 @@
+server:
+  port: 8080
+mybatis:
+  mapper-locations: classpath*:mapping/*.xml
+  config-location: classpath:mybatis-config.xml
+  type-aliases-package: com.example.*.*
+
 spring:
-  profiles:
-    active: dev
+  datasource:
+    username: root
+    password: root
+    url: jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
+
+#showSql
+logging:
+  level:
+    com:
+      example:
+        mapper : info
